# huayugao

./: bingo.html  bingo.html.mht  index.html  index.html.mht  tocfl-arcade.css  tocfl-arcade.js
docs/: tocfl-arcade-update.md
tocfl-ai-toolkit-repo/: README.md  pyproject.toml
tocfl-ai-toolkit-repo/data/: game_mode_config.json  grammar.json  news_sources.json  question_generation_config.json  question_schema_example.json  templates.json  tocfl_topics.json  vocab.json
tocfl-ai-toolkit-repo/docs/: TOCFL_遊戲化自動出題引擎_整合規格書.docx  specification.md
tocfl-ai-toolkit-repo/output/: news_questions.json  sample_questions.json
tocfl-ai-toolkit-repo/src/tocfl_ai_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tocfl-ai-toolkit-repo/src/tocfl_engine/: __init__.py  article_rewriter.py  distractor_generator.py  exporter.py  grammar_selector.py  main.py  models.py  news_fetcher.py  news_question_generator.py  question_builder.py  template_engine.py  topic_selector.py  utils.py  validator.py  vocab_selector.py
tocfl-ai-toolkit-repo/tests/: test_news_pipeline.py  test_smoke.py
tocfl-arcade/: README.md  index.html
tools/: generate_tocfl_game_content.py  validate_tocfl_game_content.py
uploads/: update_bundle_sample.json
